Fixed scrolling issue on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,15 +1,17 @@
 @import "mixins";
 
-body.mobile {
-	margin: 0;
+body:not(.mobile) {
+	margin: initial;
 }
 
 body {
+	margin: 0;
 	padding: 0;
 	height: 100%;
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	background: #f0f0f0;
 	font-size: 12px;
+	@include no-scrollbar();
 }
 
 h4 {
